Only output details about the current working directory of a process if the vnode pointer is not NULL.  This avoids spurious warnings in fstat -v output for kernel processes.

MFC after:	1 week
PR:		amd64/123456
Submitted by:	KOIE Hidetaka | hide koie.org

Former-commit-id: 787f58ee5007788d968fd1c608a67a94d09794d5